--- a/index.html
+++ b/index.html
@@ -17,17 +17,74 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
                 </div>
             </header>
             <main>
+                <div class="location">
+                    <form action="" method="post">
+                        <input type="text" name="" id="" placeholder="Paris, Belleville">
+                    </form>
+                </div>
+                <div class="explorer">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                    <a href="#restaurants-list">Explorer nos restaurants</a>
+                </div>
+                <div class="notice">
+                    <h2>Fontionnement</h2>
+                    <div class="step">
+                        <div>
+                            <p>Choisissez un restaurant</p>
+                        </div>
+                        <div>
+                            <p>Composez votre menu</p>
+                        </div>
+                        <div>
+                            <p>Dégustez au restaurant</p>
+                        </div>
+                    </div>                    
+                </div>
+                <div class="restaurants-list" id="restaurants-list">
+                    <h2>Restaurants</h2>
+                    <div class="restaurants">
+                        <a href="./menu-la-palette-du-gout.html">
+                            <div class="card-restaurant">
+                                <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                        </a>
+                        <a href="./menu-la-note-enchantee.html">
+                            <div class="card-restaurant">
+                                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                        </a>
+                        <a href="./menu-a-la-francaise.html">
+                            <div class="card-restaurant">
+                                <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                        </a>
+                        <a href="./menu-le-delice-des-sens.html">
+                            <div class="card-restaurant">
+                                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </main>
             <footer>
                 <div class="footer">
                     <h3>ohmyfood</h3>
-                    <a href="/coming-soon.html">Proposer un restaurant</a>
-                    <a href="/coming-soon.html">Devenir partenaire</a>
-                    <a href="/coming-soon.html">Mention légales</a>
+                    <a href="./coming-soon.html">Proposer un restaurant</a>
+                    <a href="./coming-soon.html">Devenir partenaire</a>
+                    <a href="./coming-soon.html">Mention légales</a>
                     <a href="mailto:contact@ohmyfood.com">Contact</a><!--Au clic sur “Contact”, un renvoi vers une adresse mail-->
                 </div>
             </footer>
