--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -9,15 +9,92 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/styles.css">
+	    <link rel="stylesheet" href="./css/view.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>Menu - À la française</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <div class="header-logo">
+                    <a href="/index.html"></a>
+                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                </div>
             </header>
             <main>
+                <div class="wallpaper">
+                    <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">                    
+                </div>
+                <div class="menu">
+                    <h2>À la française</h2>
+                    <p>ENTRÉES</p>
+                    <div>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <span>
+                            <p>Aux zestes d'orange</p>
+                            <p>25€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Velouté de légumes d'antan</h3>
+                        <span>
+                            <p>Carotte, panais, topinambour</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Soupe à l'oignon</h3>
+                        <span>
+                            <p>Revisitée</p>
+                            <p>20€</p>
+                        </span>
+                    </div>
+                    <p>PLATS</p>
+                    <div>
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <span>
+                            <p>Accompagnées d'une purée de panais</p>
+                            <p>40€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Magret de canard</h3>
+                        <span>
+                            <p>Et parmentier de pommes de terre</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                        <span>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <p>44€</p>
+                        </span>
+                    </div>
+                    <p>DESSERTS</p>
+                    <div>
+                        <h3>Pétales de violettes glacés</h3>
+                        <span>
+                            <p>Et purée de noisettes</p>
+                            <p>18€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Fondant au chocolat</h3>
+                        <span>
+                            <p>Revisité</p>
+                            <p>22€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Millefeuille croustillant</h3>
+                        <span>
+                            <p>Myrtilles et pâte d’amande</p>
+                            <p>23€</p>
+                        </span>
+                    </div>
+                    <button type="submit">Commander</button>
+                </div>
             </main>
             <footer>
                 <div class="footer">
