--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -9,23 +9,100 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/styles.css">
+	    <link rel="stylesheet" href="./css/view.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>Menu - La palette du goût</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <div class="header-logo">
+                    <a href="./index.html"></a>
+                    <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                </div>
             </header>
             <main>
+                <div class="wallpaper">
+                    <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                </div>
+                <div class="menu">
+                    <h1>La palette du goût</h1>
+                    <p>ENTRÉES</p>
+                    <div>
+                        <h2>Fricassée d'escargots</h2>
+                        <span>
+                            <p>Au piment d'Espelette</p>
+                            <p>25€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Foie gras de canard mi-cuit</h2>
+                        <span>
+                            <p>Et ses copeaux de truffe noire</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Œuf au plat</h2>
+                        <span>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p>20€</p>
+                        </span>
+                    </div>
+                    <p>PLATS</p>
+                    <div>
+                        <h2>Filet de bœuf aux herbes</h2>
+                        <span>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>40€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Parmentier de queue de bœuf</h2>
+                        <span>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Filet de turbot</h2>
+                        <span>
+                            <p>Aux agrumes</p>
+                            <p>44€</p>
+                        </span>
+                    </div>
+                    <p>DESSERTS</p>
+                    <div>
+                        <h2>Paris-Brest</h2>
+                        <span>
+                            <p>Revisité</p>
+                            <p>18€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Macaron au chocolat d'exception</h2>
+                        <span>
+                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>22€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h2>Mousse au chocolat</h2>
+                        <span>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <p>23€</p>
+                        </span>
+                    </div>
+                    <button type="submit" class="button-command">Commander</button>
+                </div>
             </main>
             <footer>
                 <div class="footer">
                     <h3>ohmyfood</h3>
-                    <a href="">Proposer un restaurant</a>
-                    <a href="">Devenir partenaire</a>
-                    <a href="">Mention légales</a>
-                    <a href="">Contact</a>
+                    <a href="./coming-soon.html">Proposer un restaurant</a>
+                    <a href="./coming-soon.html">Devenir partenaire</a>
+                    <a href="./coming-soon.html">Mention légales</a>
+                    <a href="mailto:contact@ohmyfood.com">Contact</a><!--Au clic sur “Contact”, un renvoi vers une adresse mail-->
                 </div>
             </footer>
         </div>
