--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -9,15 +9,92 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/styles.css">
+	    <link rel="stylesheet" href="./css/view.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>Menu - Le délice des sens</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <div class="header-logo">
+                    <a href="/index.html"></a>
+                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                </div>
             </header>
             <main>
+                <div class="wallpaper">
+                    <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">                    
+                </div>
+                <div class="menu">
+                    <h2>Le délice des sens</h2>
+                    <p>ENTRÉES</p>
+                    <div>
+                        <h3>Tartare de thon</h3>
+                        <span>
+                            <p>Assaisonné au yuzu</p>
+                            <p>25€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Bouchée de homard croustillant</h3>
+                        <span>
+                            <p>Et sa farandole de petits légumes</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Velouté de cèpes</h3>
+                        <span>
+                            <p>Aux truffes</p>
+                            <p>20€</p>
+                        </span>
+                    </div>
+                    <p>PLATS</p>
+                    <div>
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <span>
+                            <p>Et sa crème de truffe</p>
+                            <p>40€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Langouste rôtie</h3>
+                        <span>
+                            <p>Et ses légumes de saison</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Côte de bœuf Angus</h3>
+                        <span>
+                            <p>Et sa purée de panais</p>
+                            <p>44€</p>
+                        </span>
+                    </div>
+                    <p>DESSERTS</p>
+                    <div>
+                        <h3>Farandole de desserts</h3>
+                        <span>
+                            <p>Du chef</p>
+                            <p>18€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Crème brulée</h3>
+                        <span>
+                            <p>Revisitée</p>
+                            <p>22€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Tiramisu</h3>
+                        <span>
+                            <p>À la noisette</p>
+                            <p>23€</p>
+                        </span>
+                    </div>
+                    <button type="submit">Commander</button>
+                </div>
             </main>
             <footer>
                 <div class="footer">
