--- a/coming-soon.html
+++ b/coming-soon.html
@@ -22,6 +22,7 @@
                 </div>
             </header>
             <main>
+                <a href="/index.html">Accueil</a>
             </main>
             <footer>
                 <div class="footer">
