--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -9,15 +9,99 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/styles.css">
+	    <link rel="stylesheet" href="./css/view.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>Menu - La note enchantée</title>
     </head>
     <body>
         <div class="container">
             <header>
+                <div class="header-logo">
+                    <a href="/index.html"></a>
+                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                </div>
             </header>
             <main>
+                <div class="wallpaper">
+                    <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">                    
+                </div>
+                <div class="menu">
+                    <h2>La note enchantée</h2>
+                    <p>ENTRÉES</p>
+                    <div>
+                        <h3>Ravioles de foie gras</h3>
+                        <span>
+                            <p>Accompagnées de leur crème à la truffe</p>
+                            <p>25€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Caviar osciètre</h3>
+                        <span>
+                            <p>Sur blini à la farine de blé noir</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Homard et espuma de potiron</h3>
+                        <span>
+                            <p>Marinés aux zestes d'orange</p>
+                            <p>20€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <span>
+                            <p>Confiture de figue et pain toasté</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <p>PLATS</p>
+                    <div>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <span>
+                            <p>Sur lit de purée de céleri-rave</p>
+                            <p>40€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Langoustine poêlée</h3>
+                        <span>
+                            <p>Purée de patate douce</p>
+                            <p>35€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Mijoté de queue de bœuf</h3>
+                        <span>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                            <p>44€</p>
+                        </span>
+                    </div>
+                    <p>DESSERTS</p>
+                    <div>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <span>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                            <p>18€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Baba au rhum revisité</h3>
+                        <span>
+                            <p>Avec son coulis de citron</p>
+                            <p>22€</p>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>Tarte au citron meringuée</h3>
+                        <span>
+                            <p>Déstructurée</p>
+                            <p>23€</p>
+                        </span>
+                    </div>
+                    <button type="submit">Commander</button>
+                </div>
             </main>
             <footer>
                 <div class="footer">
