--- a/coming-soon.html
+++ b/coming-soon.html
@@ -9,7 +9,7 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/styles.css">
+	    <link rel="stylesheet" href="./css/coming-soon.css">
         <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
         <title>Coming Soon (Under Construction)</title>
     </head>
@@ -17,17 +17,35 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-                    <h1>Coming Soon (Under Construction)</h1>
+                    <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div class="p0">
+                        <div class="p1">
+                            <p>Coming Soon</p>
+                        </div>
+                        <div class="p2">
+                            <p>Under Construction</p>
+                        </div>
+                        <div class="p3">
+                            <p>Bientôt disponible</p>
+                        </div>
+                        <div class="p4">
+                            <p>En Construction</p>
+                        </div>
+                    </div>
                 </div>
             </header>
-            <main>
-                <a href="/index.html">Accueil</a>
+            <main class="main-flex">
+                <div class="wallpaper">
+                    <img src="./assets/images/coming-soon.png" alt="">
+                </div> 
+                <div class="button-back">
+                    <a href="./index.html">Retour à l'accueil</a>
+                </div>
             </main>
             <footer>
                 <div class="footer">
                     <h3>ohmyfood</h3>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a> <!--Au clic sur “Contact”, un renvoi vers une adresse mail-->
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </footer>
         </div>
