--- a/index.html
+++ b/index.html
@@ -34,14 +34,29 @@
                 <div class="notice">
                     <h2>Fontionnement</h2>
                     <div class="step">
-                        <div>
-                            <p>Choisissez un restaurant</p>
+                        <div class="step-a">
+                            <div class="step-a1">
+                                <p>Choisissez un restaurant</p>
+                            </div>
+                            <div class="step-a2">
+                                <p>1</p>
+                            </div>                            
                         </div>
-                        <div>
-                            <p>Composez votre menu</p>
+                        <div class="step-b">
+                            <div class="step-b1">
+                                <p>Composez votre menu</p>
+                            </div>
+                            <div class="step-b2">
+                                <p>2</p>
+                            </div>                            
                         </div>
-                        <div>
-                            <p>Dégustez au restaurant</p>
+                        <div class="step-c">
+                            <div class="step-c1">
+                                <p>Dégustez au restaurant</p>
+                            </div>
+                            <div class="step-c2">
+                                <p>3</p>
+                            </div>
                         </div>
                     </div>                    
                 </div>
@@ -71,7 +86,7 @@
                         </a>
                         <a href="./menu-le-delice-des-sens.html">
                             <div class="card-restaurant">
-                                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
@@ -85,7 +100,7 @@
                     <a href="./coming-soon.html">Proposer un restaurant</a>
                     <a href="./coming-soon.html">Devenir partenaire</a>
                     <a href="./coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a><!--Au clic sur “Contact”, un renvoi vers une adresse mail-->
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </footer>
         </div>
