--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -17,8 +17,12 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <a href="./index.html"></a>
-                    <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div>
+                        <a href="./index.html">#</a>
+                    </div>
+                    <div>
+                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    </div>
                 </div>
             </header>
             <main>
@@ -28,70 +32,70 @@
                 <div class="menu">
                     <h1>La palette du goût</h1>
                     <p>ENTRÉES</p>
-                    <div>
+                    <div class="card-menu">
                         <h2>Fricassée d'escargots</h2>
-                        <span>
+                        <div>
                             <p>Au piment d'Espelette</p>
                             <p>25€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Foie gras de canard mi-cuit</h2>
-                        <span>
+                        <div>
                             <p>Et ses copeaux de truffe noire</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Œuf au plat</h2>
-                        <span>
+                        <div>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                             <p>20€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>PLATS</p>
-                    <div>
+                    <div class="card-menu">
                         <h2>Filet de bœuf aux herbes</h2>
-                        <span>
+                        <div>
                             <p>Accompagné de sa ribambelle de légumes</p>
                             <p>40€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Parmentier de queue de bœuf</h2>
-                        <span>
+                        <div>
                             <p>À la truffe noire sur sa purée de panais</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Filet de turbot</h2>
-                        <span>
+                        <div>
                             <p>Aux agrumes</p>
                             <p>44€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>DESSERTS</p>
-                    <div>
+                    <div class="card-menu">
                         <h2>Paris-Brest</h2>
-                        <span>
+                        <div>
                             <p>Revisité</p>
                             <p>18€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Macaron au chocolat d'exception</h2>
-                        <span>
+                        <div>
                             <p>Et glace à la vanille de Madagascar</p>
                             <p>22€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
+                    <div class="card-menu">
                         <h2>Mousse au chocolat</h2>
-                        <span>
+                        <div>
                             <p>Au piment d'Espelette et à la truffe noire</p>
                             <p>23€</p>
-                        </span>
+                        </div>
                     </div>
                     <button type="submit" class="button-command">Commander</button>
                 </div>
@@ -102,7 +106,7 @@
                     <a href="./coming-soon.html">Proposer un restaurant</a>
                     <a href="./coming-soon.html">Devenir partenaire</a>
                     <a href="./coming-soon.html">Mention légales</a>
-                    <a href="mailto:contact@ohmyfood.com">Contact</a><!--Au clic sur “Contact”, un renvoi vers une adresse mail-->
+                    <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </footer>
         </div>
