--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -17,83 +17,87 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <a href="/index.html"></a>
-                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div>
+                        <a href="./index.html">#</a>
+                    </div>
+                    <div>
+                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    </div>
                 </div>
             </header>
             <main>
                 <div class="wallpaper">
-                    <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">                    
+                    <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">                    
                 </div>
                 <div class="menu">
-                    <h2>À la française</h2>
+                    <h1>À la française</h1>
                     <p>ENTRÉES</p>
-                    <div>
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Tartare de poulpe acidulé</h2>
+                        <div>
                             <p>Aux zestes d'orange</p>
                             <p>25€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Velouté de légumes d'antan</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Velouté de légumes d'antan</h2>
+                        <div>
                             <p>Carotte, panais, topinambour</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Soupe à l'oignon</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Soupe à l'oignon</h2>
+                        <div>
                             <p>Revisitée</p>
                             <p>20€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>PLATS</p>
-                    <div>
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Coquilles Saint-Jacques</h2>
+                        <div>
                             <p>Accompagnées d'une purée de panais</p>
                             <p>40€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Magret de canard</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Magret de canard</h2>
+                        <div>
                             <p>Et parmentier de pommes de terre</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                        <div>
                             <p>Sur son lit de gnocchis aux légumes</p>
                             <p>44€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>DESSERTS</p>
-                    <div>
-                        <h3>Pétales de violettes glacés</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Pétales de violettes glacés</h2>
+                        <div>
                             <p>Et purée de noisettes</p>
                             <p>18€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Fondant au chocolat</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Fondant au chocolat</h2>
+                        <div>
                             <p>Revisité</p>
                             <p>22€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Millefeuille croustillant</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Millefeuille croustillant</h2>
+                        <div>
                             <p>Myrtilles et pâte d’amande</p>
                             <p>23€</p>
-                        </span>
+                        </div>
                     </div>
-                    <button type="submit">Commander</button>
+                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
