--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -17,90 +17,94 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <a href="/index.html"></a>
-                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div>
+                        <a href="./index.html">#</a>
+                    </div>
+                    <div>
+                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    </div>
                 </div>
             </header>
             <main>
                 <div class="wallpaper">
-                    <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">                    
+                    <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">                    
                 </div>
                 <div class="menu">
-                    <h2>La note enchantée</h2>
+                    <h1>La note enchantée</h1>
                     <p>ENTRÉES</p>
-                    <div>
-                        <h3>Ravioles de foie gras</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Ravioles de foie gras</h2>
+                        <div>
                             <p>Accompagnées de leur crème à la truffe</p>
                             <p>25€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Caviar osciètre</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Caviar osciètre</h2>
+                        <div>
                             <p>Sur blini à la farine de blé noir</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Homard et espuma de potiron</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Homard et espuma de potiron</h2>
+                        <div>
                             <p>Marinés aux zestes d'orange</p>
                             <p>20€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Foie gras de canard cuit entier</h2>
+                        <div>
                             <p>Confiture de figue et pain toasté</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>PLATS</p>
-                    <div>
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Noix de coquilles Saint-Jacques</h2>
+                        <div>
                             <p>Sur lit de purée de céleri-rave</p>
                             <p>40€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Langoustine poêlée</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Langoustine poêlée</h2>
+                        <div>
                             <p>Purée de patate douce</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Mijoté de queue de bœuf</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Mijoté de queue de bœuf</h2>
+                        <div>
                             <p>Et riz sauvage aux zestes de citron</p>
                             <p>44€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>DESSERTS</p>
-                    <div>
-                        <h3>Macaron noisette et chocolat</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Macaron noisette et chocolat</h2>
+                        <div>
                             <p>Glace au caramel brun et sel de Guérande</p>
                             <p>18€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Baba au rhum revisité</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Baba au rhum revisité</h2>
+                        <div>
                             <p>Avec son coulis de citron</p>
                             <p>22€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Tarte au citron meringuée</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Tarte au citron meringuée</h2>
+                        <div>
                             <p>Déstructurée</p>
                             <p>23€</p>
-                        </span>
+                        </div>
                     </div>
-                    <button type="submit">Commander</button>
+                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
