--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -17,83 +17,87 @@
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <a href="/index.html"></a>
-                    <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    <div>
+                        <a href="./index.html">#</a>
+                    </div>
+                    <div>
+                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                    </div>
                 </div>
             </header>
             <main>
                 <div class="wallpaper">
-                    <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">                    
+                    <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">                    
                 </div>
                 <div class="menu">
-                    <h2>Le délice des sens</h2>
+                    <h1>Le délice des sens</h1>
                     <p>ENTRÉES</p>
-                    <div>
-                        <h3>Tartare de thon</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Tartare de thon</h2>
+                        <div>
                             <p>Assaisonné au yuzu</p>
                             <p>25€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Bouchée de homard croustillant</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Bouchée de homard croustillant</h2>
+                        <div>
                             <p>Et sa farandole de petits légumes</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Velouté de cèpes</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Velouté de cèpes</h2>
+                        <div>
                             <p>Aux truffes</p>
                             <p>20€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>PLATS</p>
-                    <div>
-                        <h3>Poulet rôti aux herbes de Provence</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Poulet rôti aux herbes de Provence</h2>
+                        <div>
                             <p>Et sa crème de truffe</p>
                             <p>40€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Langouste rôtie</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Langouste rôtie</h2>
+                        <div>
                             <p>Et ses légumes de saison</p>
                             <p>35€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Côte de bœuf Angus</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Côte de bœuf Angus</h2>
+                        <div>
                             <p>Et sa purée de panais</p>
                             <p>44€</p>
-                        </span>
+                        </div>
                     </div>
                     <p>DESSERTS</p>
-                    <div>
-                        <h3>Farandole de desserts</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Farandole de desserts</h2>
+                        <div>
                             <p>Du chef</p>
                             <p>18€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Crème brulée</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Crème brulée</h2>
+                        <div>
                             <p>Revisitée</p>
                             <p>22€</p>
-                        </span>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Tiramisu</h3>
-                        <span>
+                    <div class="card-menu">
+                        <h2>Tiramisu</h2>
+                        <div>
                             <p>À la noisette</p>
                             <p>23€</p>
-                        </span>
+                        </div>
                     </div>
-                    <button type="submit">Commander</button>
+                    <button type="submit" class="button-command">Commander</button>
                 </div>
             </main>
             <footer>
