Header et notice ok

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
             </header>
             <main>
                 <div class="location">
-                    <form action="" method="post">
-                        <input type="text" name="" id="" placeholder="Paris, Belleville">
-                    </form>
+                    <input type="text" name="" id="" placeholder="Paris, Belleville">
                 </div>
                 <div class="explorer">
-                    <h1>Réservez le menu qui vous convient</h1>
-                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <a href="#restaurants-list">Explorer nos restaurants</a>
+                    <div class="explorer-text">
+                        <h1>Réservez le menu qui<br>vous convient</h1>
+                        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                    </div>
+                    <div class="explorer-link">
+                        <a href="#restaurants-list">Explorer nos restaurants</a>
+                    </div>
                 </div>
                 <div class="notice">
                     <h2>Fontionnement</h2>
