--- a/index.html
+++ b/index.html
@@ -65,30 +65,44 @@
                 <div class="restaurants-list" id="restaurants-list">
                     <h2>Restaurants</h2>
                     <div class="restaurants">
-                        <a href="./menu-la-palette-du-gout.html">
+                        <a href="./restaurants/menu-la-palette-du-gout.html">
                             <div class="card-restaurant">
-                                <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                                <div class="img-restaurant">
+                                    <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">                                  
+                                    <div class="new1">
+                                        <p>Nouveau</p>
+                                    </div>                               
+                                </div>
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
                         </a>
-                        <a href="./menu-la-note-enchantee.html">
+                        <a href="./restaurants/menu-la-note-enchantee.html">
                             <div class="card-restaurant">
-                                <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                                <div class="img-restaurant">
+                                    <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La note enchantée'">
+                                    <div class="new2">
+                                        <p>Nouveau</p>
+                                    </div>                                
+                                </div>
                                 <h3>La note enchantée</h3>
-                                <p>Charonne</p>
+                                <p>Charonne</p>                                
                             </div>
                         </a>
-                        <a href="./menu-a-la-francaise.html">
+                        <a href="./restaurants/menu-a-la-francaise.html">
                             <div class="card-restaurant">
-                                <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                                <div class="img-restaurant">
+                                    <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'À la française'">
+                                </div>
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
                         </a>
-                        <a href="./menu-le-delice-des-sens.html">
+                        <a href="./restaurants/menu-le-delice-des-sens.html">
                             <div class="card-restaurant">
-                                <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                <div class="img-restaurant">
+                                    <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'Le délice des sens'">
+                                </div>
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
