--- a/restaurants/menu-la-palette-du-gout.html
+++ b/restaurants/menu-la-palette-du-gout.html
@@ -9,8 +9,8 @@
 	    <meta name="robots" content="index">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="stylesheet" href="./css/view.css">
-        <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico">
+	    <link rel="stylesheet" href="../css/view.css">
+        <link rel="icon" type="image/x-icon" href="../assets/images/logo/favicon.ico">
         <title>Menu - La palette du goût</title>
     </head>
     <body>
@@ -18,16 +18,16 @@
             <header>
                 <div class="header-logo">
                     <div>
-                        <a href="./index.html">#</a>
+                        <a href="../index.html">#</a>
                     </div>
                     <div>
-                        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+                        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
                     </div>
                 </div>
             </header>
             <main>
                 <div class="wallpaper">
-                    <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
+                    <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ilustration d'un plat du restaurant 'La palette du goût'">
                 </div>
                 <div class="menu">
                     <h1>La palette du goût</h1>
@@ -103,9 +103,9 @@
             <footer>
                 <div class="footer">
                     <h3>ohmyfood</h3>
-                    <a href="./coming-soon.html">Proposer un restaurant</a>
-                    <a href="./coming-soon.html">Devenir partenaire</a>
-                    <a href="./coming-soon.html">Mention légales</a>
+                    <a href="../coming-soon.html">Proposer un restaurant</a>
+                    <a href="../coming-soon.html">Devenir partenaire</a>
+                    <a href="../coming-soon.html">Mention légales</a>
                     <a href="mailto:contact@ohmyfood.com">Contact</a>
                 </div>
             </footer>
